--- a/assets/css/terms-taught.css
+++ b/assets/css/terms-taught.css
@@ -1,11 +1,10 @@
 .terms-taught {
     display: inline-block;
     border-radius: 4px;
-    padding: 2px;
+    padding: 2px 4px 2px;
     border: 1px solid rgba(51,51,51,0.2);
     box-shadow: 0 2px 2px rgba(0,0,0,.05);
     margin-bottom: 0px;
-    margin-left: 5px;
 }
 .terms-taught ul {
     list-style: none;
@@ -21,5 +20,4 @@
 }
 .terms-taught ul li:last-child::after {
     content: "";
-    margin-right: 3px;
 }
